--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -1,3 +1,4 @@
+<h1>Your Rentals!</h1><br/>
 <div class="col-md-12">
     <div class="col-md-12">
         <div class="btn-group-sm pull-right" role="group">
@@ -44,13 +45,15 @@
                 </h4>
             </div>
             <div class="col-md-3">
-                <uib-rating class="pull-right" ng-model="item.userRating"
-                    ng-click="openModal({{item}});"
-                    max="5" 
-                    readonly="item.itemRated"  
-                    aria-labelledby="default-rating"
-                    state-on="'fa fa-star fa-2x'"
-                    state-off="'fa fa-star-o fa-2x'">
+                <uib-rating class="pull-right" 
+                            ng-model="item.userRating"
+                            ng-click="openModal({{item}});"
+                            style="cursor: pointer; font-size: 2em;"
+                            max="5" 
+                            readonly="item.itemRated"  
+                            aria-labelledby="default-rating"
+                            state-on="'glyphicon glyphicon-star'"
+                            state-off="'glyphicon glyphicon-star-empty'">
                 </uib-rating>
             </div>
             <div class="col-md-7">
