Made modal for rating an item

--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -45,7 +45,7 @@
             </div>
             <div class="col-md-3">
                 <uib-rating class="pull-right" ng-model="item.userRating"
-                    ng-click="openModal({{item}});"
+                    ng-click="openRateItemModal({{item}});"
                     max="5" 
                     readonly="false"  
                     aria-labelledby="default-rating"
