Made modal for rating an item

--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -1,3 +1,4 @@
+<h1>Your Rentals!</h1><br/>
 <div class="col-md-12">
     <div class="col-md-12">
         <div class="btn-group-sm pull-right" role="group">
@@ -58,17 +59,17 @@
             </div>
             <div class="col-md-3">
                 <div class="btn-group pull-right" role="group">
-                    <button type="button" id="toggle{{item.id}}" class="btn btn-primary" data-toggle="collapse" data-target="#{{item.id}}">
+                    <button type="button" id="toggle{{item.rentalId}}" class="btn btn-primary" data-toggle="collapse" data-target="#{{item.rentalId}}">
                         Details
                     </button>
                 </div>
             </div>
         </div>
-        <div class="col-md-12 collapse myrentals-footer" id="{{item.id}}">
+        <div class="col-md-12 collapse myrentals-footer" id="{{item.rentalId}}">
             <br>
             <div class="col-md-4">
                 <uib-datepicker ng-model='activeDate' 
-                                multi-select='item.availabilityDates' 
+                                multi-select='item.rentalDates' 
                                 name="datepicker"
                                 date-disabled="disabled(date, mode)">
                 </uib-datepicker>
