--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -30,7 +30,7 @@
         </div> 
     </div>
     <br/><br/>
-    <div class="col-md-12 searchresult-container" dir-paginate="item in itemsToShow.items | orderBy:sortKey:reverse | itemsPerPage:10">
+    <div class="col-md-12 searchresult-container" dir-paginate="item in itemsToShow.items | orderBy:sortKey:reverse | itemsPerPage:10 track by $index">
             <div class="col-md-12 well-sm searchresult-heading">
                 <div class="col-md-2">
                     <img class="img-thumbnail"  
