--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -45,10 +45,10 @@
                 </h4>
             </div>
             <div class="col-md-3">
-                <uib-rating class="pull-right" ng-model="item.userRating"
+                <uib-rating class="pull-right" ng-model="item.meanRating"
                     ng-click="openRateItemModal({{item}});"
                     max="5" 
-                    readonly="false"
+                    readonly="true"
                     style="font-size: 2em; cursor: pointer;"
                     aria-labelledby="default-rating"
                     state-on="'glyphicon glyphicon-star'"
@@ -62,6 +62,10 @@
                 <div class="btn-group pull-right" role="group">
                     <button type="button" id="toggle{{item.rentalId}}" class="btn btn-primary" data-toggle="collapse" data-target="#{{item.rentalId}}">
                         Details
+                    </button>
+                    <button type="button" ng-disabled="item.itemRated" id="rate{{item.id}}" class="btn btn-success" ng-click="openRateItemModal({{item}});">
+                        <span ng-hide="item.itemRated">Rate</span>
+                        <span ng-show="item.itemRated">Already rated</span>
                     </button>
                 </div>
             </div>
@@ -92,4 +96,4 @@
         boundary-links="true" >
     </dir-pagination-controls>
 </div>
-
+{{rentedItems}}
