cleaned up and removed outputs to console in browser from addItem process

--- a/shero/src/main/webapp/app/views/ModalQuestions.html
+++ b/shero/src/main/webapp/app/views/ModalQuestions.html
@@ -4,9 +4,9 @@
 
  <div class="modal-body">
 	<form class="form-horizontal">
-	    <label>Name: {{firstName }} {{lastName }}</label>
+	    <label>Your name: {{firstName }} {{lastName }}</label>
 	    <br>
-	    <label>E-Mail: {{userEmail }}</label>   
+	    <label>Your e-mail: {{userEmail }}</label>   
 	    <br>
 	    <label>Message</label>
 	    <textarea class="form-control" rows="5" id="comment" 
