changed redirect for new items and added alert.

--- a/shero/src/main/webapp/app/views/EditItem.html
+++ b/shero/src/main/webapp/app/views/EditItem.html
@@ -1,3 +1,7 @@
+<div ng-show="isNewitem" class="alert alert-success fade in">
+    <a href="#" class="close" data-dismiss="alert">&times;</a>
+    <strong>Success!</strong> Your item has been created successfully.
+</div>
 <h1>View your item!</h1><br/>
 <div class="col-md-12">
     <div class="col-md-12 edititem-container">     
