Some bugfixes in Mails. Rating now is minimum 1.

--- a/shero/src/main/webapp/app/views/ModalRateItem.html
+++ b/shero/src/main/webapp/app/views/ModalRateItem.html
@@ -5,7 +5,8 @@
      <p class="text-center">
          <uib-rating ng-model="userRating"
                     ng-click="openRateItemModal({{item}});"
-                    max="5" 
+                    max="5"
+                    min="1"
                     readonly="false"
                     style="font-size: 2em; cursor: pointer;"
                     aria-labelledby="default-rating"
