--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-md-6">
                     <p class="text-justify">{{item.description}}</p>
-                    <div class="btn-group pull-right" role="group">
+                    <div class="btn-group pull-right" role="group" ng-show="loggedIn">
 		                <button class="btn btn-sm btn-primary" ng-click="openContactModal( item.id);"><span class="fa fa-envelope-o"></span>
 		                    Contact
 		                </button>
