--- a/shero/src/main/webapp/app/views/Navbar/Navbar.html
+++ b/shero/src/main/webapp/app/views/Navbar/Navbar.html
@@ -1,6 +1,6 @@
   <!--NAVBAR -->
 
-<div class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top" ng-controller="NavBarCtrl">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -16,7 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav"></ul>
-      <search-bar></search-bar>
+      <search-bar ng-hide="home"></search-bar>
       <user-menu ui-if="$storage.SHeroId"></user-menu>
       <!--<login-button></login-button> -->
     </div><!-- /.navbar-collapse -->
