--- a/shero/src/main/webapp/app/views/Navbar/Navbar.html
+++ b/shero/src/main/webapp/app/views/Navbar/Navbar.html
@@ -1,10 +1,14 @@
   <!--NAVBAR -->
 
-<div class="navbar navbar-default navbar-fixed-top" ng-controller="NavBarCtrl">
+<div class="navbar navbar-default" ng-controller="NavBarCtrl">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" 
+        class="navbar-toggle collapsed" 
+        data-toggle="collapse" 
+        data-target="#navbar" 
+        aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -14,11 +18,10 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav"></ul>
       <search-bar ng-hide="home"></search-bar>
       <user-menu ui-if="$storage.SHeroId"></user-menu>
-      <!--<login-button></login-button> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </div>
