Fixed footer, added background image, changed color of item-description
TODO: Bootstrap Landingpage

--- a/shero/src/main/webapp/app/views/LandingPage.html
+++ b/shero/src/main/webapp/app/views/LandingPage.html
@@ -1,1 +1,7 @@
-<p>Landing page!</p>
+
+<div class="col-md-12 col-lg-12 landingpage">
+
+    <p>Landing page!</p>
+    <search-bar></search-bar>
+
+</div>
