--- a/shero/src/main/webapp/css/main.css
+++ b/shero/src/main/webapp/css/main.css
@@ -2,6 +2,26 @@
 ============================================================================= */
 body { 
     padding-top:5em;
+    background: url(../img/landingpage.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:30px;
+   width:100%;
+   background-color:aliceblue;
+}
+
+h1 {
+    color:white;
 }
 
 /* ANIMATION STYLINGS
