--- a/shero/src/main/webapp/app/views/LandingPage.html
+++ b/shero/src/main/webapp/app/views/LandingPage.html
@@ -1,7 +1,8 @@
 
 <div class="col-md-12 col-lg-12 landingpage">
 
-    <p>Landing page!</p>
+    <h1 class="text-center" style="color: #ffffff">Find items to share!</h1>
     <search-bar></search-bar>
 
 </div>
+
