--- a/shero/src/main/webapp/app/views/Navbar/Navbar.html
+++ b/shero/src/main/webapp/app/views/Navbar/Navbar.html
@@ -1,6 +1,6 @@
   <!--NAVBAR -->
 
-<div class="navbar navbar-default" ng-controller="NavBarCtrl">
+<div class="navbar navbar-default" ng-controller="NavBarCtrl" style="border-radius: 0px;">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
