Changed color of headings

--- a/shero/src/main/webapp/app/views/EditItem.html
+++ b/shero/src/main/webapp/app/views/EditItem.html
@@ -2,7 +2,7 @@
     <a href="#" class="close" data-dismiss="alert">&times;</a>
     <strong>Success!</strong> Your item has been created successfully.
 </div>
-<h1>View your item!</h1><br/>
+<h1 style="color: #ffffff">View your item!</h1><br/>
 <div class="col-md-12">
     <div class="col-md-12 edititem-container">     
             <div class="col-md-12 well-sm searchresult-heading">
