--- a/shero/src/main/webapp/app/views/EditUser/EditUser.html
+++ b/shero/src/main/webapp/app/views/EditUser/EditUser.html
@@ -1,4 +1,4 @@
-<h1>Edit your data!</h1><br/>
+<h1 style="color: #ffffff">Edit your data!</h1><br/>
 <ul class="nav nav-tabs">
   <li role="presentation" ng-class="{active:isGeneral}" style="cursor:pointer"><a go-to="/EditUser/General">General</a></li>
   <li role="presentation" ng-class="{active:isAddress}" style="cursor:pointer"><a go-to="/EditUser/Address">Address</a></li>
