--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -1,4 +1,4 @@
-<h1>Your Rentals!</h1><br/>
+<h1 style="color: #ffffff">Your Rentals!</h1><br/>
 <div class="col-md-12">
     <div class="col-md-12">
         <div class="btn-group-sm pull-right" role="group">
