--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -1,4 +1,4 @@
-<h1>Your searchresults!</h1><br/>
+<h1 style="color: #ffffff">Your searchresults!</h1><br/>
 <div class="col-md-12">
     <div class="col-md-12">
         <div class="btn-group-sm pull-right" role="group">
