--- a/shero/src/main/webapp/app/views/MyRentals.html
+++ b/shero/src/main/webapp/app/views/MyRentals.html
@@ -1,7 +1,7 @@
 <h1 style="color: #ffffff">Your Rentals!</h1><br/>
 <div class="col-md-12">
     <div class="col-md-12">
-        <div class="btn-group-sm pull-right" role="group">
+        <div class="btn-group-sm pull-right" role="group" style="color: #ffffff">
             Sort by
             <button type="button" 
                 class="btn btn-primary " 
