--- a/shero/src/main/webapp/app/views/SearchResults.html
+++ b/shero/src/main/webapp/app/views/SearchResults.html
@@ -1,7 +1,7 @@
 <h1 style="color: #ffffff">Your searchresults!</h1><br/>
 <div class="col-md-12">
     <div class="col-md-12">
-        <div class="btn-group-sm pull-right" role="group">
+        <div class="btn-group-sm pull-right" style="color: #ffffff" role="group">
             Sort by
             <button type="button" 
                 class="btn btn-primary " 
