--- a/shero/src/main/webapp/css/landingpage.css
+++ b/shero/src/main/webapp/css/landingpage.css
@@ -1,3 +1,6 @@
 .landingpage  {
-    background-color: rbg(0,0,0,0); 
+    position: absolute;
+    margin-left: 50px;
+    margin-right: auto;
+    height: 100px;
 }
