--- a/shero/src/main/webapp/app/views/EditItem.html
+++ b/shero/src/main/webapp/app/views/EditItem.html
@@ -1,64 +1,65 @@
 <h1>View your item!</h1><br/>
-<div class="col-md-12">
-    <div class="col-md-12 edititem-container">     
-            <div class="col-md-12 well-sm searchresult-heading">
-                <div class="col-md-2">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 edititem-container">     
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 well-sm searchresult-heading">
+            
+                <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12">
                     <img class="img-thumbnail"  
-                         src="{{item.imgUrl}}"
-                         onerror="if (this.src != 'img/placeholder_small.jpeg') this.src = 'img/placeholder_small.jpeg';"
-                         alt="Couldn't find image">
-                    </img>
-                </div>
-                <div class="col-md-7 edititem-title">
+                    src="{{item.imgUrl}}"
+                    onerror="if (this.src != 'img/placeholder_small.jpeg') this.src = 'img/placeholder_small.jpeg';"
+                    alt="Couldn't find image">
+                </img>
+            </div>       
+                <div class="col-lg-7 col-md-10 col-sm-8 col-xs-12 edititem-title">
                     <h4> {{item.name}} 
                         <small>({{item.address.street}} {{item.address.number}}, {{item.address.zipcode}} {{item.address.city}})</small>
                     </h4>
                 </div>
-                <div class="col-md-3">
-                    <uib-rating class="pull-right" ng-model="item.meanRating" 
-                        max="5" 
-                        readonly="true"  
-                        aria-labelledby="default-rating"
-                        style="font-size: 2em;"
-                        state-on="'glyphicon glyphicon-star'"
-                        state-off="'glyphicon glyphicon-star-empty'">
-                    </uib-rating>
-                </div>
-                <div class="col-md-7">
-                    <h4>{{item.price  | currency : "€"}} / day</h4>
-                </div>
-                <div class="col-md-3">
-                    <div class="btn-group pull-right" role="group">
-                        <button type="button" class="btn btn-warning" ng-click="deleteItem();">Delete this item</button>
-                    </div>
-                </div>
-                <div class="col-md-7"> 
-                </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-10 col-sm-8 col-xs-12">
+                    <uib-rating class="visible-lg-pull-right" ng-model="item.meanRating" 
+                    max="5" 
+                    readonly="true"  
+                    aria-labelledby="default-rating"
+                    style="font-size: 2em;"
+                    state-on="'glyphicon glyphicon-star'"
+                    state-off="'glyphicon glyphicon-star-empty'">
+                </uib-rating>
+            </div>
+            <div class="col-lg-7 col-md-10 col-sm-8 col-md-offset-2 col-lg-offset-0 col-xs-12">
+                <h4>{{item.price  | currency : "€"}} / day</h4>
+            </div>
+            <div class="col-lg-3 col-md-10 col-sm-8 col-md-offset-2 col-sm-offset-4 col-lg-offset-0 col-xs-12">
+                <div class="btn-group visible-lg-pull-right" role="group">
+                    <button type="button" class="btn btn-warning" ng-click="deleteItem();">Delete this item</button>
                 </div>
             </div>
-            <div class="col-md-12 collapse in edititem-footer" id="{{item.id}}">
-                <br>
-                <div class="col-md-4">
-                    <uib-datepicker ng-model='activeDate' 
-                                    multi-select='item.availabilityDates' 
-                                    name="datepicker"
-                                    date-disabled="disabled(date, mode)">
-                    </uib-datepicker>
-                </div>
-                <div class="col-md-6">
-                    <p class="text-justify">{{item.description}}</p>
-                    <div class="btn-group pull-right" role="group">
-		            </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="col-md-12" ng-repeat="tag in item.taglist" ng-hide="item.taglist.length == 0">
-                        <span class="itemtag pull-right">{{tag}}</span>
-                    </div>
-                </div>
-            </div>
-            <br>
-        </div>
+    <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7"> 
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+    </div>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse in edititem-footer" id="{{item.id}}">
+    <br>
+    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+        <uib-datepicker ng-model='activeDate' 
+        multi-select='item.availabilityDates' 
+        name="datepicker"
+        date-disabled="disabled(date, mode)">
+    </uib-datepicker>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+    <p class="text-justify">{{item.description}}</p>
+    <div class="btn-group pull-right" role="group">
+    </div>
+</div>
+<div class="col-lg-2 col-md-6 col-sm-4 col-xs-12">
+    <div class="col-md-12" ng-repeat="tag in item.taglist" ng-hide="item.taglist.length == 0">
+        <span class="itemtag pull-right">{{tag}}</span>
+    </div>
+</div>
+</div>
+<br>
+</div>
 </div>
 
 
