--- a/shero/src/main/webapp/app/views/ModalQuestions.html
+++ b/shero/src/main/webapp/app/views/ModalQuestions.html
@@ -9,10 +9,12 @@
 	    <label>Your e-mail: {{userEmail }}</label>   
 	    <br>
 	    <label>Message</label>
-	    <textarea class="form-control" rows="5" id="comment" 
-	       ng-model="formData.message"
-	       required 
-	       autofocus></textarea>
+	    	<textarea class="form-control" rows="5" id="comment" 
+	      		ng-model="formData.message"
+	       		required 
+	       		autofocus>
+	       	</textarea>
+
 	</form>
  </div>
 
