CSS on the landingpage

--- a/shero/src/main/webapp/app/views/LandingPage.html
+++ b/shero/src/main/webapp/app/views/LandingPage.html
@@ -1,5 +1,5 @@
 
-<div class="col-md-11 col-lg-11 landingpage">
+<div class="container col-md-12 col-lg-12 landingpage">
     <h1 class="text-center" style="color: #ffffff">Find items to share!</h1>
     <search-bar></search-bar>
 
