--- a/shero/src/main/webapp/app/views/EditUser/EditUser.html
+++ b/shero/src/main/webapp/app/views/EditUser/EditUser.html
@@ -4,6 +4,7 @@
   <li role="presentation" ng-class="{active:isAddress}" style="cursor:pointer"><a go-to="/EditUser/Address">Address</a></li>
   <li role="presentation" ng-class="{active:isPassword}"style="cursor:pointer"><a go-to="/EditUser/Password">Password</a></li>
 </ul>
-
+<div class="edituser col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <br/><br/><br/>
 <div ui-view></div>
+<div>
