--- a/shero/src/main/webapp/app/views/AddItem/AddItem.html
+++ b/shero/src/main/webapp/app/views/AddItem/AddItem.html
@@ -1,5 +1,5 @@
 <h1 style="color: #ffffff">Rent out your item!</h1><br/>
-<div class="col-lg-12">
+<div class="edituser col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="process">
       <div class="process-row">
           <div class="process-step">
@@ -28,8 +28,7 @@
           </div> 
       </div>
   </div>
-</div>
 
   <form class="form-horizontal" id="" ng-submit="processForm()">
     <div id="" ui-view></div>
-  </form>
+  </form></div>
